--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body {
 
 /* Hero section */
 .hero-section{
-    background: url('images/images 5.jfif') no-repeat center center/cover;
+    background: url('images/neuro.jfif') no-repeat center center/cover;
     text-align: center;
     color: red;
     padding: 100px 20px;
